# MagicCamera

./: README.md
Project-AndroidStudio/: build.gradle
Project-AndroidStudio/app/: build.gradle
Project-AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
Project-AndroidStudio/magicfilter/: CMakeLists.txt  build.gradle
